MyDemoOrg/force-app/main/default/objects/Book__c/fields/Book_Keeper__c.field-meta.xml
<CustomField>
    <fullName>Book_Keeper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Book Keeper</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Books</relationshipName>
    <type>Lookup</type>
</CustomField>