MyDemoOrg/force-app/main/default/objects/Book__c/fields/Platform_Description__c.field-meta.xml
<CustomField>
    <fullName>Platform_Description__c</fullName>
    <label>Platform Description</label>
    <length>18</length>
    <type>Text</type>
</CustomField>