MyDemoOrg/force-app/main/default/objects/Book__c/fields/Unique__c.field-meta.xml
<CustomField>
    <fullName>Unique__c</fullName>
    <externalId>true</externalId>
    <label>Unique</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>