MyDemoOrg/force-app/main/default/objects/Book__c/validationRules/book_price.validationRule-meta.xml
<ValidationRule>
    <fullName>book_price</fullName>
    <active>true</active>
    <description>book price can&apos;t be zero</description>
    <errorConditionFormula>Price__c   &lt;= 0</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Price can&apos;t be negative or zero.</errorMessage>
</ValidationRule>